fixed example text overflow issue

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -32,6 +32,7 @@ button {
 pre {
   text-align: left;
   background: #eee;
+  overflow-x: auto;
 }
 section {
   margin-bottom: 30px;
